fixed style and spacing with colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+a {
+	text-decoration: none;
+	color: white;
+}
+
 body {
-	background-color: black;
+	background-color: white;
 }
 /*HEADER*/
 header {
@@ -13,6 +18,8 @@ header {
 
 /*NAME*/
 .name {
+		height: 40%;
+		padding-top: 18%;
 		color: white;
 		font-size: 70px;
 		font-family: 'Roboto Condensed', sans-serif;
@@ -23,8 +30,11 @@ header {
   	margin: 0;
 }
 
+.Brian {
+	background-color: black;
+}
 .title {
-	color: white;	
+	color: white;
 	font-size: 40px;
 	font-family: 'Roboto Condensed', sans-serif;
 	text-transform: uppercase;
@@ -37,6 +47,7 @@ header {
 
 .social {
 	text-align: center;
+	padding-top: 3%;
 }
 
 h1 {
@@ -48,9 +59,9 @@ h1 {
 	font-family: "Lobster";
 }
 ul {
-	background-color: black;
+	color: black;
 	padding: 10px;
-	background-color: white;
+	background-color: black;
 	text-align: center;
 }
 li {
